WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157366
[iOS] Playback does not pause when locking screen after playing to AirPlay.
https://bugs.webkit.org/show_bug.cgi?id=157366
Summary
[iOS] Playback does not pause when locking screen after playing to AirPlay.
Eric Carlson
Reported
2016-05-04 16:56:02 PDT
Playback does not pause when locking screen after playing to AirPlay.
Attachments
Proposed patch.
(1.78 KB, patch)
2016-05-04 17:02 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-05-04 17:01:02 PDT
<
rdar://problem/22100651
>
Eric Carlson
Comment 2
2016-05-04 17:02:32 PDT
Created
attachment 278144
[details]
Proposed patch.
WebKit Commit Bot
Comment 3
2016-05-04 17:55:19 PDT
Comment on
attachment 278144
[details]
Proposed patch. Clearing flags on attachment: 278144 Committed
r200446
: <
http://trac.webkit.org/changeset/200446
>
WebKit Commit Bot
Comment 4
2016-05-04 17:55:22 PDT
All reviewed patches have been landed. Closing bug.
Jeremy Jones
Comment 5
2016-05-05 12:24:08 PDT
Comment on
attachment 278144
[details]
Proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=278144&action=review
> Source/WebCore/platform/audio/PlatformMediaSession.cpp:294 > + // if we in the background.
"because if we in the background" doesn't sound right maybe "while in the background".
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug