[iOS] Playback does not pause when locking screen after playing to AirPlay. https://bugs.webkit.org/show_bug.cgi?id=157366 <rdar://problem/22100651>

Reviewed by Dean Jackson.

* platform/audio/PlatformMediaSession.cpp:
(WebCore::PlatformMediaSession::isPlayingToWirelessPlaybackTargetChanged): Save and restore
  m_interruptionCount around calling sessionIsPlayingToWirelessPlaybackTargetChanged because
  it will call beginInterruption if we are already in the background and the counter will
  get out of sync.


Canonical link: https://commits.webkit.org/175478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200446 268f45cc-cd09-0410-ab3c-d52691b4dbfc